// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeOutdatedPkgChoices should render choices in correct order 1`] = `
[
  {
    "choices": [
      {
        "message": "foo (runtime) 1.0.0 ❯ 2.0.0   ",
        "name": "foo",
        "value": {
          "currentRange": "1.0.0",
          "latestRange": "2.0.0",
          "name": "foo",
          "source": "rootPolicy",
          "targetField": "dependencies",
        },
      },
      {
        "message": "qar (runtime) 1.0.0 ❯ 1.1.0   ",
        "name": "qar",
        "value": {
          "currentRange": "1.0.0",
          "latestRange": "1.1.0",
          "name": "qar",
          "source": "rootPolicy",
          "targetField": "dependencies",
        },
      },
      {
        "message": "zoo (dev)     1.0.0 ❯ 1.1.0   ",
        "name": "zoo",
        "value": {
          "currentRange": "1.0.0",
          "latestRange": "1.1.0",
          "name": "zoo",
          "source": "rootPolicy",
          "targetField": "devDependencies",
        },
      },
      {
        "message": "bar (peer)    1.0.0 ❯ 1.1.0   ",
        "name": "bar",
        "value": {
          "currentRange": "1.0.0",
          "latestRange": "1.1.0",
          "name": "bar",
          "source": "rootPolicy",
          "targetField": "peerDependencies",
        },
      },
    ],
    "message": "Root policies",
  },
]
`;

exports[`makeOutdatedPkgChoices should render choices with context information 1`] = `
[
  {
    "choices": [
      {
        "message": "foo (runtime) 1.0.0 ❯ 2.0.0   ",
        "name": "foo",
        "value": {
          "componentId": ComponentID {
            "_legacy": BitId {
              "box": undefined,
              "name": "comp1",
              "scope": "scope",
              "version": "latest",
            },
            "_scope": undefined,
          },
          "currentRange": "1.0.0",
          "latestRange": "2.0.0",
          "name": "foo",
          "source": "component",
          "targetField": "dependencies",
        },
      },
    ],
    "message": "scope/comp1 (component)",
  },
  {
    "choices": [
      {
        "message": "bar (peer)    1.0.0 ❯ 1.1.0   ",
        "name": "bar",
        "value": {
          "currentRange": "1.0.0",
          "latestRange": "1.1.0",
          "name": "bar",
          "source": "variants",
          "targetField": "peerDependencies",
          "variantPattern": "{comp2}",
        },
      },
    ],
    "message": "{comp2} (variant)",
  },
]
`;
